--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
   },
   "homepage": "https://github.com/Judahh/flexiblePersistence#readme",
   "dependencies": {
-    "pg": "8.3.0"
+    "pg": "8.3.0",
+    "express": "4.17.1",
+    "ts-mixer": "5.3.0",
+    "bignumber.js": "9.0.0",
+    "journaly": "1.0.0"
   },
   "devDependencies": {
-    "flexiblepersistence": "1.0.59",
+    "flexiblepersistence": "1.0.60",
     "@types/jest": "26.0.5",
     "@types/mongodb": "3.5.25",
     "@types/mongoose": "5.7.32",
