--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -31,7 +31,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 13.x]
+        node-version: [13.x]
 
     steps:
       - name: Use Node.js ${{ matrix.node-version }}
