--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -32,7 +32,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 13.x]
+        node-version: [13.x]
 
     steps:
       - name: Use Node.js ${{ matrix.node-version }}
