--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@flexiblepersistence/postgres",
-  "version": "0.0.4",
+  "name": "@flexiblepersistence/dao",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/source/index.js",
   "publishConfig": {
@@ -27,28 +27,27 @@
   },
   "homepage": "https://github.com/Judahh/flexiblePersistence#readme",
   "dependencies": {
-    "default-initializer": "0.0.5",
-    "pg": "8.4.2",
-    "ts-mixer": "5.3.0",
-    "bignumber.js": "9.0.1",
-    "journaly": "1.0.1"
+    "default-initializer": "latest",
+    "pg": "latest",
+    "ts-mixer": "latest",
+    "bignumber.js": "latest",
+    "journaly": "latest"
   },
   "devDependencies": {
-    "flexiblepersistence": "1.0.65",
-    "@types/jest": "26.0.15",
-    "@types/mongoose": "5.7.37",
-    "@types/node": "14.14.6",
-    "@typescript-eslint/eslint-plugin": "4.7.0",
-    "@typescript-eslint/parser": "4.7.0",
-    "eslint": "7.13.0",
-    "eslint-config-prettier": "6.15.0",
-    "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-import": "2.22.1",
-    "jest": "26.6.3",
-    "prettier": "^2.1.2",
-    "reflect-metadata": "0.1.13",
-    "ts-jest": "26.4.4",
-    "typescript": "4.0.5"
+    "flexiblepersistence": "latest",
+    "@types/jest": "latest",
+    "@types/node": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-filenames": "latest",
+    "eslint-plugin-prettier": "latest",
+    "eslint-plugin-import": "latest",
+    "jest": "latest",
+    "prettier": "latest",
+    "reflect-metadata": "latest",
+    "ts-jest": "latest",
+    "typescript": "latest"
   }
 }
