--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flexiblepersistence/dao",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "",
   "main": "dist/source/index.js",
   "publishConfig": {
@@ -27,11 +27,11 @@
   },
   "homepage": "https://github.com/Judahh/flexiblePersistence#readme",
   "dependencies": {
-    "default-initializer": "latest",
     "pg": "latest",
     "ts-mixer": "latest",
     "bignumber.js": "latest",
-    "journaly": "latest"
+    "journaly": "latest",
+    "mongodb": "latest"
   },
   "devDependencies": {
     "flexiblepersistence": "latest",
