--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "@flexiblepersistence/dao",
-  "version": "0.1.5",
-  "description": "",
+  "version": "0.1.6",
+  "description": "A DAO implementation for Flexible Persistence's PersistenceAdapter",
   "main": "dist/source/index.js",
+  "keywords": [
+    "dao",
+    "flexiblepersistence",
+    "nodejs",
+    "typescript",
+    "javascript"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -30,8 +37,7 @@
     "pg": "latest",
     "ts-mixer": "latest",
     "bignumber.js": "latest",
-    "journaly": "latest",
-    "mongodb": "latest"
+    "journaly": "latest"
   },
   "devDependencies": {
     "flexiblepersistence": "latest",
