--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -17,10 +17,11 @@ jobs:
 
     services:
       postgres:
-        image: postgres:10.8
+        image: postgres:latest
         env:
+          POSTGRES_HOST_AUTH_METHOD: trust
           POSTGRES_USER: postgres
-          POSTGRES_DB: postgres
+          POSTGRES_DB: read_DB
         ports:
           - 5432:5432
         # needed because the postgres container does not provide a healthcheck
