--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
-version: '3'
+version: '3.8'
+
+networks:
+ net:
+  driver: bridge
 
 services:
   mongo:
@@ -6,9 +10,35 @@ services:
     ports:
       - 27017:27017
   postgres:
-    image: postgres:10.8
+    image: postgres:latest
     environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_USER: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: read_DB
     ports:
       - 5432:5432
+    # command:
+    #   sh -c "psql postgres postgres -c \"CREATE DATABASE $$POSTGRES_DB\""
+
+  mssql:
+    image: "mcr.microsoft.com/mssql/server:latest"
+    ports:
+    - 1433:1433
+    environment:
+      ACCEPT_EULA: "Y"
+      SA_PASSWORD: yourStrong(!)Password
+      MSSQL_PID: Developer
+    healthcheck:
+      interval: 30s
+      timeout: 30s
+      retries: 3
+
+  minion:
+    image: mcr.microsoft.com/mssql-tools:latest
+    environment:
+      MSSQL_DB: read_DB
+      MSSQL_SA_PASSWORD: yourStrong(!)Password
+    command:
+      sh -c "/opt/mssql-tools/bin/sqlcmd -S mssql -U SA -P \"$$MSSQL_SA_PASSWORD\" -Q \"CREATE DATABASE $$MSSQL_DB\""
+    depends_on:
+    - mssql
