--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -29,7 +29,15 @@ jobs:
       mongo:
         image: mongo:latest
         ports:
-          - 27017:27017
+          - 27017:2701
+      mssql:
+        image: "mcr.microsoft.com/mssql/server:latest"
+        ports:
+          - 1433:1433
+        env:
+          ACCEPT_EULA: "Y"
+          SA_PASSWORD: yourStrong(!)Password
+          MSSQL_PID: Developer
 
     strategy:
       matrix:
