--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -75,3 +75,6 @@ jobs:
           POSTGRES_USER: "postgres"
           MONGO_HOST: mongo
           MONGO_PORT: ${{ job.services.mongo.ports[27017] }}
+          MSSQL_HOST: mssql
+          MSSQL_PORT: ${{ job.services.mssql.ports[1433] }}
+          MSSQL_USER: "sa"
