remove unused env var

--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -90,10 +90,7 @@ jobs:
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
           POSTGRES_USER: "postgres"
           MONGO_HOST: mongo
-          MONGO_PORT: ${{ job.services.mongo.ports[27017] }}
-          MSSQL_HOST: mssql
-          MSSQL_PORT: ${{ job.services.mssql.ports[1433] }}
-          MSSQL_USER: "sa"
+          MONGO_PORT: ${{ job.services.mongo.ports[27017] }}"
       - name: Publish
         if: contains(matrix.node-version, '14.x')
         run: |
@@ -148,9 +145,6 @@ jobs:
         env:
           # use postgres for the host here because we have specified a container for the job.
           # If we were running the job on the VM this would be localhost
-          POSTGRES_HOST: postgres
-          POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
-          POSTGRES_USER: "postgres"
           MONGO_HOST: mongo
           MONGO_PORT: ${{ job.services.mongo.ports[27017] }}
           MSSQL_HOST: mssql
