--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flexiblepersistence/dao",
-  "version": "1.2.2",
+  "version": "1.2.4",
   "description": "A DAO implementation for Flexible Persistence's PersistenceAdapter",
   "main": "dist/source/index.js",
   "keywords": [
@@ -44,7 +44,7 @@
     "@flexiblepersistence/mssql": "latest",
     "@flexiblepersistence/default-initializer": "latest",
     "flexiblepersistence": "latest",
-    "@types/jest": "26.0.24",
+    "@types/jest": "latest",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
@@ -53,10 +53,10 @@
     "eslint-plugin-filenames": "latest",
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-import": "latest",
-    "jest": "26.6.2",
+    "jest": "latest",
     "prettier": "latest",
     "reflect-metadata": "latest",
-    "ts-jest": "26.5.6",
+    "ts-jest": "latest",
     "ts-node": "latest",
     "typescript": "latest"
   }
