--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
   },
   "homepage": "https://github.com/Judahh/flexiblePersistence#readme",
   "dependencies": {
-    "pg": "latest",
     "bignumber.js": "latest",
     "journaly": "latest"
   },
   "devDependencies": {
     "@flexiblepersistence/mssql": "latest",
+    "@flexiblepersistence/pgsql": "latest",
     "@flexiblepersistence/default-initializer": "latest",
     "flexiblepersistence": "latest",
     "@jest/types": "latest",
@@ -47,6 +47,7 @@
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
+    "pg": "latest",
     "mongoose": "latest",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
