--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,6 @@
   "workbench.colorCustomizations": {
     "editorBracketHighlight.foreground1": "#5bb3b3",
     "editorBracketHighlight.foreground2": "#98C379",
-    "editorBracketHighlight.foreground3": "#ec5f67",
+    "editorBracketHighlight.foreground3": "#ec5f67"
   }
 }
