--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flexiblepersistence/dao",
-  "version": "2.0.0",
+  "version": "2.0.1-beta",
   "description": "A DAO implementation for Flexible Persistence's PersistenceAdapter",
   "main": "dist/source/index.js",
   "keywords": [
