--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Test Integration
         uses: borales/actions-yarn@master
         with:
-          cmd: integration postgres # will run `yarn test` command
+          cmd: integration pgsql # will run `yarn test` command
         env:
           # use postgres for the host here because we have specified a container for the job.
           # If we were running the job on the VM this would be localhost
