--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           production: true
           addTests: true
+          tests: 'tests/ test/ *test.* *config.* source/*tils.*'
 
   postgres:
     needs: [build]
