update packages and ci

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -89,6 +89,7 @@ jobs:
         with:
           run_test: 'false'
           integration_filter: 'pgsql'
+          change_permissions: 'true'
         env:
           POSTGRES_HOST: postgres
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
@@ -134,6 +135,7 @@ jobs:
         with:
           run_test: 'false'
           integration_filter: 'mssql'
+          change_permissions: 'true'
         env:
           # use postgres for the host here because we have specified a container for the job.
           # If we were running the job on the VM this would be localhost
