--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,6 @@
     "editorBracketHighlight.foreground1": "#5bb3b3",
     "editorBracketHighlight.foreground2": "#98C379",
     "editorBracketHighlight.foreground3": "#ec5f67"
-  }
+  },
+  "python.terminal.activateEnvironment": false
 }
