--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -144,3 +144,4 @@ jobs:
           MSSQL_HOST: mssql
           MSSQL_PORT: ${{ job.services.mssql.ports[1433] }}
           MSSQL_USER: "sa"
+          MSSQL_PASSWORD: "yourStrong(!)Password"
