--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
     image: mongo:latest
     ports:
       - 27017:27017
-  postgres:
+  pgsql:
     image: postgres:latest
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
-      POSTGRES_USER: postgres
+      POSTGRES_USER: pgsql
       POSTGRES_DB: read_DB
     ports:
       - 5432:5432
