--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,15 @@ services:
       ACCEPT_EULA: "Y"
       SA_PASSWORD: yourStrong(!)Password
       MSSQL_PID: Developer
+  minion:
+    image: mcr.microsoft.com/mssql-tools:latest
+    depends_on:
+    - mssql
+    command: >
+      sh -c "
+      echo 'START' &&
+      echo sleep 60 &&
+      /opt/mssql-tools/bin/sqlcmd -S mssql -U SA -P 'yourStrong(!)Password'
+      -Q 'CREATE DATABASE read_DB' &&
+      echo 'END'
+      "
