--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -108,7 +108,7 @@ jobs:
           - 1433:1433
         env:
           ACCEPT_EULA: "Y"
-          SA_PASSWORD: yourStrong(!)Password
+          SA_PASSWORD: "yourStrong(!)Password"
           MSSQL_PID: Developer
 
       # minion:
