--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -138,9 +138,7 @@ jobs:
         run: |
           docker run --rm --entrypoint /bin/bash mcr.microsoft.com/mssql/server:latest -c "
           echo 'START' &&
-          echo sleep 10 &&
-          /opt/mssql-tools/bin/sqlcmd -S mssql -U SA -P 'yourStrong(!)Password'
-          -Q 'CREATE DATABASE read_DB' &&
+          /opt/mssql-tools/bin/sqlcmd -S mssql -U SA -P 'yourStrong(!)Password' -Q 'CREATE DATABASE read_DB' &&
           echo 'END'
           "
       - name: Use Node.js ${{ matrix.node-version }}
