--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -136,7 +136,7 @@ jobs:
     steps:
       - name: INIT MSSQL
         run: |
-          docker run --rm --entrypoint /bin/bash mcr.microsoft.com/mssql/server:latest -c "
+          apt update && apt install -y unzip sqlcmd &&"
           echo 'START' &&
           /opt/mssql-tools/bin/sqlcmd -S mssql -U SA -P 'yourStrong(!)Password' -Q 'CREATE DATABASE read_DB' &&
           echo 'END'
