--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -142,5 +142,7 @@ jobs:
           MSSQL_PORT: ${{ job.services.mssql.ports[1433] }}
           MSSQL_USER: "SA"
           MSSQL_PASSWORD: "yourStrong(!)Password"
+          MSSQL_SSL: "true"
+          MSSQL_OPTIONS: "{}"
           MONGO_HOST: mongo
           MONGO_PORT: ${{ job.services.mongo.ports[27017] }}
