--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -146,6 +146,6 @@ jobs:
           MSSQL_PASSWORD: "yourStrong(!)Password"
           MSSQL_SA_PASSWORD: "yourStrong(!)Password"
           MSSQL_SSL: "true"
-          MSSQL_OPTIONS: "false"
+          MSSQL_OPTIONS: "true"
           MONGO_HOST: mongo
           MONGO_PORT: ${{ job.services.mongo.ports[27017] }}
