--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -133,6 +133,13 @@ jobs:
         uses: judahh/artifactToUnzip@main
         with:
           production: true
+      - name: Wait for mssql to be ready
+        uses: actions/wait-for-ssh@main
+        with:
+          host: mssql
+          port: 1433
+          timeout: 10m
+          retries: 5
       - name: TEST
         uses: judahh/yarnTest@main
         with:
