--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -113,9 +113,9 @@ jobs:
         env:
           ACCEPT_EULA: "Y"
           INSTANCE: "tcp:127.0.0.1"
-          SA_PASSWORD: "yourStrong(!)Password"
-          MSSQL_PASSWORD: "yourStrong(!)Password"
-          MSSQL_SA_PASSWORD: "yourStrong(!)Password"
+          SA_PASSWORD: yourStrong(!)Password
+          MSSQL_PASSWORD: yourStrong(!)Password
+          MSSQL_SA_PASSWORD: yourStrong(!)Password
           MSSQL_PID: "Developer"
           DATABASE_NAME: "read_DB"
 
@@ -133,10 +133,10 @@ jobs:
         uses: judahh/artifactToUnzip@main
         with:
           production: true
-      - name: Wait for mssql to be ready
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '30s'
+      # - name: Wait for mssql to be ready
+      #   uses: jakejarvis/wait-action@master
+      #   with:
+      #     time: '30s'
       - name: TEST
         uses: judahh/yarnTest@main
         with:
@@ -146,10 +146,10 @@ jobs:
         env:
           MSSQL_HOST: mssql
           MSSQL_PORT: ${{ job.services.mssql.ports[1433] }}
-          MSSQL_USER: "SA"
-          SA_PASSWORD: "yourStrong(!)Password"
-          MSSQL_PASSWORD: "yourStrong(!)Password"
-          MSSQL_SA_PASSWORD: "yourStrong(!)Password"
+          MSSQL_USER: sa
+          SA_PASSWORD: yourStrong(!)Password
+          MSSQL_PASSWORD: yourStrong(!)Password
+          MSSQL_SA_PASSWORD: yourStrong(!)Password
           MSSQL_SSL: "true"
           MSSQL_OPTIONS: "false"
           MONGO_HOST: mongo
