--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -85,6 +85,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: https://registry.npmjs.org
+      - name: Install 7z
+        run: sudo apt-get install p7zip-full
       - name: ARTIFACT TO UNZIP
         uses: judahh/artifactToUnzip@main
         with:
@@ -139,6 +141,8 @@ jobs:
   #       with:
   #         node-version: ${{ matrix.node-version }}
   #         registry-url: https://registry.npmjs.org
+  #     - name: Install 7z
+  #       run: sudo apt-get install p7zip-full
   #     - name: ARTIFACT TO UNZIP
   #       uses: judahh/artifactToUnzip@main
   #       with:
