--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -86,7 +86,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: https://registry.npmjs.org
       - name: Install 7z
-        run: sudo apt-get install p7zip-full
+        run: apt-get install p7zip-full
       - name: ARTIFACT TO UNZIP
         uses: judahh/artifactToUnzip@main
         with:
@@ -142,7 +142,7 @@ jobs:
   #         node-version: ${{ matrix.node-version }}
   #         registry-url: https://registry.npmjs.org
   #     - name: Install 7z
-  #       run: sudo apt-get install p7zip-full
+  #       run: apt-get install p7zip-full
   #     - name: ARTIFACT TO UNZIP
   #       uses: judahh/artifactToUnzip@main
   #       with:
