--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -85,6 +85,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: https://registry.npmjs.org
+      - name: Add repos
+        run: add-apt-repository universe
+      - name: Update
+        run: apt-get update
       - name: Install 7z
         run: apt-get install p7zip-full
       - name: ARTIFACT TO UNZIP
@@ -141,6 +145,10 @@ jobs:
   #       with:
   #         node-version: ${{ matrix.node-version }}
   #         registry-url: https://registry.npmjs.org
+  #     - name: Add repos
+  #       run: add-apt-repository universe
+  #     - name: Update
+  #       run: apt-get update
   #     - name: Install 7z
   #       run: apt-get install p7zip-full
   #     - name: ARTIFACT TO UNZIP
