--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -85,6 +85,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: https://registry.npmjs.org
+      - name: Add SPC
+        run: apt-get install software-properties-common
+      - name: Update
+        run: apt-get update
       - name: Add repos
         run: add-apt-repository universe
       - name: Update
@@ -145,6 +149,10 @@ jobs:
   #       with:
   #         node-version: ${{ matrix.node-version }}
   #         registry-url: https://registry.npmjs.org
+  #     - name: Add SPC
+  #       run: apt-get install software-properties-common
+  #     - name: Update
+  #       run: apt-get update
   #     - name: Add repos
   #       run: add-apt-repository universe
   #     - name: Update
