--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -56,7 +56,7 @@ jobs:
     # runs all of the steps inside the specified container rather than on the VM host.
     # Because of this the network configuration changes from host based network to a container network.
     container:
-      image: node:latest
+      image: ubuntu-latest
 
     services:
       mongo:
@@ -85,16 +85,19 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: https://registry.npmjs.org
-      - name: Add SPC
-        run: apt-get install software-properties-common
-      - name: Update
-        run: apt-get update
-      - name: Add repos
-        run: add-apt-repository universe
-      - name: Update
-        run: apt-get update
-      - name: Install 7z
-        run: apt-get install p7zip-full
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      # - name: Add SPC
+      #   run: apt-get install software-properties-common
+      # - name: Update
+      #   run: apt-get update
+      # - name: Add repos
+      #   run: add-apt-repository universe
+      # - name: Update
+      #   run: apt-get update
+      # - name: Install 7z
+      #   run: apt-get install p7zip-full
       - name: ARTIFACT TO UNZIP
         uses: judahh/artifactToUnzip@main
         with:
@@ -119,7 +122,7 @@ jobs:
   #  runs all of the steps inside the specified container rather than on the VM host.
   #  Because of this the network configuration changes from host based network to a container network.
   #  container:
-  #    image: node:latest
+  #    image: ubuntu-latest
 
   #   services:
   #     mongo:
@@ -149,6 +152,9 @@ jobs:
   #       with:
   #         node-version: ${{ matrix.node-version }}
   #         registry-url: https://registry.npmjs.org
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 16
   #     - name: Add SPC
   #       run: apt-get install software-properties-common
   #     - name: Update
